# mindurka-rabbitmq-rust

./: Cargo.toml
mindurka-rabbitmq-rust-macro/: Cargo.toml
mindurka-rabbitmq-rust-macro/src/: lib.rs
src/: lib.rs
